# paperfactory

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  additional_analysis.py  app.py  cli.py  generate_figures.py  generate_paper.py  pyproject.toml  requirements.txt  research_script.py  research_script_v2.py
examples/: sample_paper.json
guidelines/: aci_sj.json  asce_jse.json  autom_constr.json  buildings_mdpi.json  cem_con_comp.json  comput_struct.json  const_build_mat.json  eesd.json  eng_structures.json  jbe.json  jweia.json  ksce_jce.json  steel_comp_struct.json  struct_safety.json  thin_walled.json
pipeline/: __init__.py  code_execution.py  literature_review.py  orchestrator.py  paper_writing.py  research_design.py  result_analysis.py
tests/: test_abstract_generator.py  test_ai_reviewer.py  test_bibtex_import.py  test_citation_converter.py  test_data_sources.py  test_equation_utils.py  test_figure_utils.py  test_integration.py  test_latex_generator.py  test_orchestrator.py  test_paper_analytics.py  test_pdf_generator.py  test_quality_checker.py  test_reference_utils.py  test_research_advisor.py  test_revision_tracker.py  test_submission_utils.py  test_table_utils.py  test_template_system.py  test_word_generator.py
utils/: __init__.py  abstract_generator.py  ai_reviewer.py  bibtex_import.py  citation_converter.py  claude_cli.py  code_runner.py  data_sources.py  equation_utils.py  figure_utils.py  latex_generator.py  paper_analytics.py  pdf_generator.py  quality_checker.py  reference_utils.py  research_advisor.py  revision_tracker.py  submission_utils.py  table_utils.py  template_system.py  word_generator.py
(+8 files in other folders)
