[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "paperfactory"
version = "1.0.0"
description = "AI agent for civil engineering research paper generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SangMin Lee"},
]
keywords = [
    "research-paper", "civil-engineering", "structural-engineering",
    "machine-learning", "claude-code", "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30.0"]
dev = ["pytest>=7.0", "ruff>=0.1.0", "pre-commit>=3.0"]

[project.scripts]
paperfactory = "cli:main"

[project.urls]
Homepage = "https://github.com/concrete-sangminlee/paperfactory"
Repository = "https://github.com/concrete-sangminlee/paperfactory"

[tool.setuptools.packages.find]
include = ["utils*", "pipeline*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
